--- a/Spotify Top 50.ipynb
+++ b/Spotify Top 50.ipynb
@@ -790,6 +790,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "98ee277c",
+   "metadata": {},
+   "source": [
+    "### Análise de popularidade"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "bc9ed972",
